[package]
name        = "tormov"
description = "TORrent MOVer, a simple tool to move regexed folders with no incomplete files"
version     = "0.2.0"
authors     = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license     = "MIT"
repository     = "https://github.com/MindFlavor/tormov"
documentation  = "https://github.com/MindFlavor/tormov"
homepage       = "https://github.com/MindFlavor/tormov"

keywords       = ["torrent", "file", "symlink"]
categories     = ["Command line utilities"]


[dependencies]
regex        = "0.2.2"
serde        = "1.0.15"
serde_json   = "1.0.4"
serde_derive = "1.0.15"
