[package]
name          = "tormov"
description   = "TORrent MOVer, a simple tool to move (or link) regexed folders with no incomplete files"
version       = "0.3.0"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license       = "MIT"
repository    = "https://github.com/MindFlavor/tormov"
documentation = "https://github.com/MindFlavor/tormov/blob/master/README.md"
homepage      = "https://mindflavor.github.io/tormov"

keywords      = ["torrent", "file", "symlink"]
categories    = ["command-line-utilities"]


[dependencies]
regex        = "*"
serde        = "*"
serde_json   = "*"
serde_derive = "*"
