[package]
name          = "tormov"
description   = "TORrent MOVer, a simple tool to move (or link) regexed folders with no incomplete files"
version       = "0.3.1"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license       = "MIT"
repository    = "https://github.com/MindFlavor/tormov"
documentation = "https://github.com/MindFlavor/tormov/blob/master/README.md"
homepage      = "https://mindflavor.github.io/tormov"

keywords      = ["torrent", "file", "symlink"]
categories    = ["command-line-utilities"]


[dependencies]
regex        = "1.3.4"
serde        = "1.0.104"
serde_json   = "1.0.48"
serde_derive = "1.0.104"
